--- a/gearshift/src/main/res/layout/filter_list_profile_item.xml
+++ b/gearshift/src/main/res/layout/filter_list_profile_item.xml
@@ -1,30 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/filter_list_profile_item_background" >
+    android:background="@drawable/filter_list_profile_item_background">
 
-    <TextView
-        android:id="@android:id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="8dp"
-        android:fontFamily="sans-serif-condensed"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:gravity="center_vertical" />
-
-    <TextView
-        android:id="@android:id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="8dp"
-        android:textSize="10sp"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center_vertical" />
-</LinearLayout>
+    <include layout="@layout/filter_list_profile_content"/>
+</RelativeLayout>
