--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
     <style name="AppTheme.NoBackground" parent="AppTheme">
         <item name="android:windowBackground">@null</item>
     </style>
-    
+
     <style name="AppTheme.DialogNoTitle" parent="Theme.AppCompat.Light.Dialog">
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
@@ -50,13 +50,14 @@
     <style name="DefaultToolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:background">?attr/colorPrimary</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
     </style>
 
     <style name="DefaultActionMode" parent="@style/Widget.AppCompat.ActionMode">
         <item name="background">@color/accent_dull</item>
         <item name="titleTextStyle">@style/DefaultActionMode.Title</item>
         <item name="subtitleTextStyle">@style/DefaultActionMode.Subtitle</item>
+        <item name="height">@dimen/action_mode_height</item>
     </style>
 
     <style name="DefaultActionMode.Title" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">
