--- a/gearshift/src/main/res/layout/toolbar.xml
+++ b/gearshift/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/toolbar_height"
     android:elevation="4dp"
     android:paddingTop="@dimen/status_bar_height"
     style="@style/DefaultToolbar"/>
