--- a/gearshift/src/main/res/layout/alt_speed_switch.xml
+++ b/gearshift/src/main/res/layout/alt_speed_switch.xml
@@ -7,4 +7,5 @@
     android:layout_gravity="end"
     android:padding="12dp"
     android:contentDescription="@string/alt_speed"
-    android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp"/>
+    android:thumb="@drawable/ic_arrow_drop_down_circle_white_24dp"
+    android:theme="@style/AltSpeedSwitch"/>
