--- a/gearshift/src/main/res/layout/settings_profile_item.xml
+++ b/gearshift/src/main/res/layout/settings_profile_item.xml
@@ -10,13 +10,36 @@
     android:paddingTop="4dp"
     android:paddingBottom="4dp">
 
+    <ImageView
+        android:id="@+id/profile_color"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="fitXY" />
+
     <TextView android:id="@android:id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/profile_color"
+        android:layout_toEndOf="@id/profile_color"
+        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingRight="20dp"
+        android:paddingEnd="20dp"
+        android:paddingTop="8dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:fontFamily="sans-serif-condensed"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif-light"
+        android:singleLine="true"
         android:ellipsize="marquee"
+        android:marqueeRepeatLimit ="marquee_forever"
+        android:scrollHorizontally="true"
         android:fadingEdge="horizontal" />
 
     <TextView android:id="@android:id/text2"
@@ -25,9 +48,18 @@
         android:layout_below="@android:id/text1"
         android:layout_alignLeft="@android:id/text1"
         android:layout_alignStart="@android:id/text1"
+        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingRight="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="8dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:fontFamily="sans-serif-light"
-        android:ellipsize="end"
-        android:maxLines="2" />
+        android:textSize="10sp"
+        android:fontFamily="sans-serif-condensed"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit ="marquee_forever"
+        android:scrollHorizontally="true"
+        android:fadingEdge="horizontal" />
 
 </RelativeLayout>
