some translation fixes. toolbar design tweaks

--- a/gearshift/src/main/res/menu/torrent_list_fragment.xml
+++ b/gearshift/src/main/res/menu/torrent_list_fragment.xml
@@ -4,6 +4,7 @@
     <item android:id="@+id/find"
           android:icon="@drawable/ic_search_white_24dp"
           android:title="@string/find"
+          app:actionViewClass="android.support.v7.widget.SearchView"
           app:showAsAction="ifRoom|collapseActionView"
           android:visible="false"/>
 
