preserve the find query on orientation change

--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -55,6 +55,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@android:color/white</item>
         <item name="colorControlNormal">@android:color/white</item>
+        <item name="android:textColorHint">@android:color/white</item>
         <item name="colorControlHighlight">@color/ripple_material_light</item>
         <item name="android:textColorPrimary">@android:color/primary_text_dark</item>
     </style>
