--- a/gearshift/src/main/res/xml/general_preferences.xml
+++ b/gearshift/src/main/res/xml/general_preferences.xml
@@ -42,6 +42,11 @@
             android:title="@string/show_add_dialog"
             android:defaultValue="true" />
 
+        <CheckBoxPreference
+            android:key="delete_data"
+            android:title="@string/delete_data_default"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
     
     <PreferenceCategory
