--- a/gearshift/src/main/res/values/arrays.xml
+++ b/gearshift/src/main/res/values/arrays.xml
@@ -13,6 +13,7 @@
     </string-array>
 
     <string-array name="pref_full_update_values" translatable="false">
+        <item>0</item>
         <item>2</item>
         <item>3</item>
         <item>5</item>
