convert to kotlin

--- a/gearshift2/src/main/res/layout/content_torrent.xml
+++ b/gearshift2/src/main/res/layout/content_torrent.xml
@@ -9,7 +9,7 @@
         xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_torrent"
         android:layout_width="match_parent" android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="org.sugr.gearshift.TorrentActivity" tools:showIn="@layout/torrent_app_bar">
+        tools:context=".ui.TorrentActivity" tools:showIn="@layout/torrent_app_bar">
 
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="Hello World!" app:layout_constraintBottom_toBottomOf="@+id/content_torrent"
