--- a/gearshift2/src/main/res/layout/content_torrent.xml
+++ b/gearshift2/src/main/res/layout/content_torrent.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
+        <variable
+            name="viewModel"
+            type="org.sugr.gearshift.viewmodel.TorrentViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
