--- a/gearshift2/src/main/res/layout/main_navigation_activity.xml
+++ b/gearshift2/src/main/res/layout/main_navigation_activity.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="org.sugr.gearshift.viewmodel.TorrentViewModel"/>
+            type="org.sugr.gearshift.viewmodel.MainNavigationViewModel"/>
     </data>
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,7 +12,7 @@
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:fitsSystemWindows="true" tools:openDrawer="start">
 
-        <include layout="@layout/torrent_app_bar"
+        <include layout="@layout/main_navigation_app_bar"
             android:id="@+id/appBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
