--- a/gearshift2/src/main/res/layout/profile_editor.xml
+++ b/gearshift2/src/main/res/layout/profile_editor.xml
@@ -21,7 +21,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
@@ -46,7 +46,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
@@ -64,7 +64,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
@@ -108,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginEnd="12dp"
+                android:gravity="start"
                 android:text="@{viewModel.updateIntervalLabel}"
                 android:onClick="@{viewModel::onPickUpdateInterval}"/>
 
@@ -133,7 +134,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="12dp"
                 android:gravity="start"
-                android:text="@{String.format(viewModel.fullUpdateLabel, viewModel.fullUpdateValue)}"
+                android:text='@{String.format(viewModel.fullUpdateLabel ?? "", viewModel.fullUpdateValue)}'
                 android:onClick="@{viewModel::onPickFullUpdate}"/>
 
 
@@ -152,7 +153,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
@@ -170,7 +171,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
@@ -194,7 +195,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
@@ -212,7 +213,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
@@ -236,7 +237,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
@@ -254,7 +255,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
