--- a/gearshift2/src/main/res/layout/profile_editor.xml
+++ b/gearshift2/src/main/res/layout/profile_editor.xml
@@ -114,7 +114,7 @@
                 android:layout_marginEnd="12dp"
                 android:gravity="start"
                 android:text="@{viewModel.updateIntervalLabel}"
-                android:onClick="@{viewModel::onPickUpdateInterval}"/>
+                android:onClick="@{() -> viewModel.onPickUpdateInterval()}"/>
 
 
         </LinearLayout>
@@ -139,7 +139,7 @@
                 android:layout_marginEnd="12dp"
                 android:gravity="start"
                 android:text='@{String.format(viewModel.fullUpdateLabel ?? "", viewModel.fullUpdateValue)}'
-                android:onClick="@{viewModel::onPickFullUpdate}"/>
+                android:onClick="@{() -> viewModel.onPickFullUpdate()}"/>
 
 
         </LinearLayout>
