use a star as the required drawable, add a required color attribute

--- a/gearshift2/src/main/res/layout/profile_editor.xml
+++ b/gearshift2/src/main/res/layout/profile_editor.xml
@@ -31,12 +31,14 @@
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="11dp"
                 android:text="@={viewModel.profileName}"
-                android:drawableStart="@drawable/ic_navigate_next_black_small"
+                android:drawableStart="@drawable/ic_required_small"
                 android:layout_width="match_parent"
                 android:hint="@string/profile_name"
                 android:maxLines="1"
                 bind:error="@{viewModel.profileNameValid ? null : @string/con_name_cannot_be_empty}"/>
         </android.support.design.widget.TextInputLayout>
+
+        <!-- TODO: Add the color selector in this section -->
 
         <TextView
             style="@style/HeaderText.Small"
@@ -56,7 +58,7 @@
                 android:inputType="text"
                 android:ems="10"
                 android:text="@={viewModel.host}"
-                android:drawableStart="@drawable/ic_navigate_next_black_small"
+                android:drawableStart="@drawable/ic_required_small"
                 android:layout_width="match_parent"
                 android:hint="@string/con_host"
                 android:maxLines="1"
@@ -76,7 +78,7 @@
                 android:inputType="number"
                 android:ems="10"
                 android:text="@={viewModel.port}"
-                android:drawableStart="@drawable/ic_navigate_next_black_small"
+                android:drawableStart="@drawable/ic_required_small"
                 android:layout_width="match_parent"
                 android:hint="@string/con_port"
                 android:maxLines="1"
@@ -294,14 +296,6 @@
                 android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
-
-        <TextView
-            style="@style/HeaderText.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@{(viewModel.sectionCollapse[`misc`] ?? false) ? @drawable/ic_header_collapsed : @drawable/ic_header_expanded}"
-            android:onClick="@{() -> viewModel.toggleCollapseSection(`misc`)}"
-            android:text="@string/misc"/>
 
     </LinearLayout>
 </layout>
