improve the view navigation code

--- a/gearshift2/src/main/res/layout/first_time_profile_editor.xml
+++ b/gearshift2/src/main/res/layout/first_time_profile_editor.xml
@@ -23,7 +23,13 @@
                 style="@style/HeaderText.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/create_new_profile"/>
+                android:text="@string/first_time_profile_title"/>
+
+            <TextView
+                style="@style/HeaderText.Small.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/first_time_profile_subtitle"/>
 
             <include layout="@layout/profile_editor"
                 android:id="@+id/editor"
