--- a/gearshift2/src/main/res/layout/main_navigation_app_bar.xml
+++ b/gearshift2/src/main/res/layout/main_navigation_app_bar.xml
@@ -22,8 +22,7 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            android:tag="@string/container_chrome">
+            android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                 android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
