implement the two dialogs for the profile editor

--- a/gearshift2/src/main/res/values/arrays.xml
+++ b/gearshift2/src/main/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_full_update_values" translatable="false">
+    <integer-array name="pref_full_update_values">
         <item>0</item>
         <item>2</item>
         <item>3</item>
@@ -9,9 +9,9 @@
         <item>30</item>
         <item>60</item>
         <item>100</item>
-    </string-array>
+    </integer-array>
 
-    <string-array name="pref_update_interval_values" translatable="false">
+    <integer-array name="pref_update_interval_values">
         <item>1</item>
         <item>2</item>
         <item>5</item>
@@ -20,14 +20,14 @@
         <item>60</item>
         <item>120</item>
         <item>-1</item>
-    </string-array>
+    </integer-array>
 
-    <string-array name="pref_con_retries_values" translatable="false">
+    <integer-array name="pref_con_retries_values">
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>5</item>
         <item>10</item>
         <item>15</item>
-    </string-array>
+    </integer-array>
 </resources>
